trunk/Archive2/7f/3b4774916c8f5b/output
main.cpp: In member function 'void Grr<T>::foo()':
main.cpp:10:12: error: invalid use of incomplete type 'struct Mgr'
         mgr->fuckoff();
            ^
main.cpp:1:8: error: forward declaration of 'struct Mgr'
 struct Mgr;
        ^
